@@ -1,0 +1,113 @@
+//$Id$ -*- c++ -*-
+
+/* gtkmm example Copyright (C) 2002 gtkmm development team
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License version 2
+ * as published by the Free Software Foundation.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
+ */
+
+#include <iostream>
+#include "examplewindow.h"
+
+ExampleWindow::ExampleWindow()
+: m_Button_Quit("Quit")
+{
+  set_title("Gtk::TreeView (TreeModelFilter) example");
+  set_border_width(5);
+  set_default_size(400, 200);
+
+  add(m_VBox);
+
+  //Add the TreeView, inside a ScrolledWindow, with the button underneath:
+  m_ScrolledWindow.add(m_TreeView);
+
+  //Only show the scrollbars when they are necessary:
+  m_ScrolledWindow.set_policy(Gtk::POLICY_AUTOMATIC, Gtk::POLICY_AUTOMATIC);
+
+  m_VBox.pack_start(m_ScrolledWindow);
+  m_VBox.pack_start(m_ButtonBox, Gtk::PACK_SHRINK);
+
+  m_ButtonBox.pack_start(m_Button_Quit, Gtk::PACK_SHRINK);
+  m_ButtonBox.set_border_width(5);
+  m_ButtonBox.set_layout(Gtk::BUTTONBOX_END);
+  m_Button_Quit.signal_clicked().connect( sigc::mem_fun(*this, &ExampleWindow::on_button_quit) );
+
+  //Create the Tree model:
+  m_refTreeModel = Gtk::ListStore::create(m_Columns);
+
+  //Put the TreeModel inside a filter model:
+  m_refTreeModelFilter = Gtk::TreeModelFilter::create(m_refTreeModel);
+  m_refTreeModelFilter->set_visible_func( sigc::mem_fun(*this, &ExampleWindow::on_filter_row_visible) );
+
+  m_TreeView.set_model(m_refTreeModelFilter);
+
+  //Fill the TreeView's model
+  Gtk::TreeModel::Row row = *(m_refTreeModel->append());
+  row[m_Columns.m_col_id] = 1;
+  row[m_Columns.m_col_name] = "Billy Bob";
+  row[m_Columns.m_col_show] = true;
+
+  row = *(m_refTreeModel->append());
+  row[m_Columns.m_col_id] = 2;
+  row[m_Columns.m_col_name] = "Joey Jojo";
+  row[m_Columns.m_col_show] = true;
+
+  row = *(m_refTreeModel->append());
+  row[m_Columns.m_col_id] = 3;
+  row[m_Columns.m_col_name] = "Rob McRoberts";
+  row[m_Columns.m_col_show] = false; //This should cause this row to be filtered out (now shown).
+
+  //Add the TreeView's view columns:
+  m_TreeView.append_column("ID", m_Columns.m_col_id);
+  m_TreeView.append_column("Name", m_Columns.m_col_name);
+  m_TreeView.append_column_editable("Show", m_Columns.m_col_show);
+
+  //Make all the columns reorderable:
+  //This is not necessary, but it's nice to show the feature.
+  //You can use TreeView::set_column_drag_function() to more
+  //finely control column drag and drop.
+  for(guint i = 0; i < 2; i++)
+  {
+    Gtk::TreeView::Column* pColumn = m_TreeView.get_column(i);
+    pColumn->set_reorderable();
+  }
+
+  show_all_children();
+}
+
+ExampleWindow::~ExampleWindow()
+{
+}
+
+bool ExampleWindow::on_filter_row_visible(const Gtk::TreeModel::const_iterator& iter)
+{
+  if(iter)
+  {
+    //iter seems to be an iter to the child model:
+    //Gtk::TreeModel::iterator iter_child = m_refTreeModelFilter->convert_iter_to_child_iter(iter);
+    //if(iter_child)
+    //{
+      Gtk::TreeModel::Row row = *iter;
+      return row[m_Columns.m_col_show];
+    //}
+  }
+
+  return true;
+}
+
+void ExampleWindow::on_button_quit()
+{
+  hide();
+}
+
+
