@@ -22,6 +22,7 @@
 #include <gtkmm/treeviewcolumn.h>
 #include <gtkmm/treeview_private.h>
 #include <gtkmm/treemodel.h>
+#include <gtkmm/treemodelfilter.h>
 
 namespace
 {
@@ -308,17 +309,6 @@ void TreeView::set_search_equal_func(const SlotSearchEqual& slot)
       &SignalProxy_SearchEqual::gtk_callback_destroy);
 }
 
-void TreeView::set_row_separator_func(const SlotRowSeparator& slot)
-{
-  //Create a signal proxy. A pointer to this will be passed through the callback's data parameter.
-  //It will be deleted when SignalProxy_RowSeparator::gtk_callback_destroy() is called.
-  TreeView_Private::SignalProxy_RowSeparator *const pSignalProxy = new TreeView_Private::SignalProxy_RowSeparator(slot);
-
-  gtk_tree_view_set_row_separator_func(gobj(),
-      &TreeView_Private::SignalProxy_RowSeparator::gtk_callback, pSignalProxy,
-      &TreeView_Private::SignalProxy_RowSeparator::gtk_callback_destroy);
-}
-
 void TreeView::set_column_drag_function(const SlotColumnDrop& slot)
 {
   //Create a signal proxy. A pointer to this will be passed through the callback's data parameter.
@@ -405,6 +395,22 @@ void TreeView::reset_expander_column()
   gtk_tree_view_set_expander_column(gobj(), 0 /* see C docs */);
 }
 
+Glib::RefPtr<Gtk::TreeModel> TreeView::_get_base_model()
+{
+  Glib::RefPtr<TreeModel> refModel = get_model();
+
+  bool get_child = true;
+  while(get_child && refModel)
+  {
+    Glib::RefPtr<Gtk::TreeModelFilter> refModelFilter = Glib::RefPtr<Gtk::TreeModelFilter>::cast_dynamic(refModel);
+    if(refModelFilter)
+      refModel = refModelFilter->get_model();
+    else
+      get_child = false;
+  }
+
+  return refModel;
+}
 
 void TreeView::_auto_store_on_cellrenderer_toggle_edited(const Glib::ustring& path_string,
                                                          int model_column)
@@ -412,7 +418,8 @@ void TreeView::_auto_store_on_cellrenderer_toggle_edited(const Glib::ustring& pa
   Gtk::TreePath path (path_string);
 
   //Get the row from the path:
-  Glib::RefPtr<TreeModel> refModel = get_model();
+  Glib::RefPtr<TreeModel> refModel = _get_base_model();
+
   Gtk::TreeModel::iterator iter = refModel->get_iter(path);
   if(iter)
   {
@@ -436,6 +443,16 @@ void TreeView::move_column_to_start(TreeViewColumn& column)
   gtk_tree_view_move_column_after(gobj(), (column).gobj(), 0 /* See C docs */);
 }
 
+void TreeView::set_row_separator_func(const SlotRowSeparator& slot)
+{
+  //Create a signal proxy. A pointer to this will be passed through the callback's data parameter.
+  //It will be deleted when SignalProxy_RowSeparator::gtk_callback_destroy() is called.
+  TreeView_Private::SignalProxy_RowSeparator *const pSignalProxy = new TreeView_Private::SignalProxy_RowSeparator(slot);
+
+  gtk_tree_view_set_row_separator_func(gobj(),
+      &TreeView_Private::SignalProxy_RowSeparator::gtk_callback, pSignalProxy,
+      &TreeView_Private::SignalProxy_RowSeparator::gtk_callback_destroy);
+}
 
 } // namespace Gtk
 
