@@ -614,6 +614,9 @@ _CONVERSION(`GtkTreeIter*',`const TreeModel::iterator&',`TreeModel::iterator(gtk
   _WRAP_PROPERTY("enable-search", bool)
   _WRAP_PROPERTY("search-column", int)
   _WRAP_PROPERTY("fixed-height-mode", bool)
+
+  /// Get the treeview's model, but actually get the child model if it's a TreeModelFilter.
+  Glib::RefPtr<Gtk::TreeModel> _get_base_model();
   
 protected:
 
@@ -628,6 +631,7 @@ protected:
 
   template<class ColumnType> friend
   void TreeView_Private::_connect_auto_store_editable_signal_handler(TreeView*, CellRenderer*, const TreeModelColumn<ColumnType>&);
+
 #endif //DOXYGEN_SHOULD_SKIP_THIS
 };
 
@@ -840,7 +844,7 @@ void _auto_store_on_cellrenderer_text_edited_string(const Glib::ustring& path_st
   Gtk::TreePath path(path_string);
 
   //Get the row from the path:
-  Glib::RefPtr<TreeModel> refModel = this_p->get_model();
+  Glib::RefPtr<TreeModel> refModel = this_p->_get_base_model();
   Gtk::TreeModel::iterator iter = refModel->get_iter(path);
   if(iter)
   {
@@ -858,7 +862,7 @@ void _auto_store_on_cellrenderer_text_edited_numerical(const Glib::ustring& path
   Gtk::TreePath path(path_string);
 
   //Get the row from the path:
-  Glib::RefPtr<TreeModel> refModel = this_p->get_model();
+  Glib::RefPtr<TreeModel> refModel = this_p->_get_base_model();
   Gtk::TreeModel::iterator iter = refModel->get_iter(path);
   if(iter)
   { 
