@@ -1,3 +1,13 @@
+2004-10-30  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/src/treemodelfilter.[hg|ccg]: Added implementations of 
+	set_value_impl() to ouput a warning when it is used instead of 
+	the child model. Added const versions of patch convert methods.
+	* gtk/src/treeview.[hg|ccg]: Added _get_base_model() non-public API 
+	member method to get the child model, if necessary. Used it in the 
+	cell renderer signal handlers instead of get_model().
+	* Added examples/book/treeview/filter, from the gtkmm-2-4 branch.
+
 2004-10-16  Gene Ruebsamen  <gene@erachampion.com>
  
  	* docs/tutorial/gtkmm-tut.xml: Added a chapter for the new gtk-2.4 
